--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,16 @@
 
   </div>
 
-  <div class= "boxContainer">
+  <!-- <div class= "boxContainer">
+    </div> -->
+
     <div class= "containerDiv">
       <div id= "cont1">stuff</div>
-      <div class= "container">stuff</div>
-      <div class= "container">stuff</div>
-      <div class= "container">stuff</div>
+      <div id= "cont2">stuff</div>
+      <div id= "cont3">stuff</div>
+      <div id= "cont4">stuff</div>
     </div>
-  </div>
+
 
   <script src='js/utils.js'></script>
   <script src='js/states.js'></script>
