--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Rebirth of Redit</title>
   <link rel="stylesheet" href="css/styles.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
 
@@ -12,34 +13,24 @@
     <div id="titleDiv"><img src="/assets/logo.svg" alt=""></div>
   </div>
 
-  <div id="navContainer">
+  <nav id="navbar">
+    <ul id="buttons">
+      <li><a href="#myBoards" onClick="App.Router.navigate('myBoards')">My Boards</a></li>
+      <li><a href="#random" onClick="App.Router.navigate('random')">Random</a></li>
+      <li><a href="#getTheApp" onClick="App.Router.navigate('getTheApp')">Get the App</a></li>
+    </ul>
+  </nav>
 
-      <a href="#myBoards" onClick="App.Router.navigate('myBoards')">
-      <div class="nav">My Boards</div></a>
-
-      <a href="#random" onClick="App.Router.navigate('random')">
-      <div class="nav">Random</div></a>
-
-      <a href="#getTheApp" onClick="App.Router.navigate('getTheApp')">
-      <div class="nav">Get the App</div></a>
-
-  </div>
-
-  <!-- <div class= "boxContainer">
-    </div> -->
-
-    <div class= "containerDiv">
-      <div id= "cont1">stuff</div>
-      <div id= "cont2">stuff</div>
-      <div id= "cont3">stuff</div>
-      <div id= "cont4">stuff</div>
+    <div class= "container">
+      <div id= "cont1" class= "reddit">stuff</div>
+      <div id= "cont2" class= "reddit">stuff</div>
+      <div id= "cont3" class= "reddit">stuff</div>
+      <div id= "cont4" class= "reddit">stuff</div>
     </div>
-
 
   <script src='js/utils.js'></script>
   <script src='js/states.js'></script>
   <script src='js/router.js'></script>
-
 
 </body>
 </html>
