reddit post generating

--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,26 @@
       <li><a href="#myBoards" onClick="App.Router.navigate('myBoards')">My Boards</a></li>
       <li><a href="#random" onClick="App.Router.navigate('random')">Random</a></li>
       <li><a href="#getTheApp" onClick="App.Router.navigate('getTheApp')">Get the App</a></li>
+      <img src="/assets/facebook_grey.svg">
+      <img src="/assets/instagram_grey.svg">
     </ul>
   </nav>
 
-    <div class= "container">
-      <div id= "cont1" class= "reddit">stuff</div>
-      <div id= "cont2" class= "reddit">stuff</div>
-      <div id= "cont3" class= "reddit">stuff</div>
-      <div id= "cont4" class= "reddit">stuff</div>
-    </div>
+  <div id="boxdiv">
+  <div id = "container">
+<!--     <div id= "cont1" class= "reddit">stuff</div>
+    <div id= "cont2" class= "reddit">stuff</div>
+    <div id= "cont3" class= "reddit">stuff</div>
+    <div id= "cont4" class= "reddit">stuff</div> -->
+  </div>
+  </div>
+
+ <!--  <div id="bottom">
+    <div id="bottomIcons">
+    <img src="/assets/facebook_grey.svg" alt="">
+    <img src="/assets/instagram_grey.svg"></div>
+  </div> -->
+
 
   <script src='js/utils.js'></script>
   <script src='js/states.js'></script>
